--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 .name {
     font-family: Helvetica, "Times New Roman", serif;
-    justify-content: center;
-    border-block: 2px;
+    text-align: center;
     border-style: inset double;
     border-bottom-color: aquamarine;
     border-top-color: aquamarine;
-    border-width: 30px;
+    margin: 70px auto;
+
+
 }
 h2 p {
     font-family: "Times New Roman", Georgia, serif;
+}
+
+body {
+    background: lightpink;
 }
