--- a/style.css
+++ b/style.css
@@ -33,7 +33,10 @@
     text-align: center;
     font-family: 'Roboto Mono', sans-serif;
     font-weight: bold;
+    font-size: 32px;
     color: #FFFFFF;
+    border-top-left-radius: 80px;
+    border-bottom-right-radius: 80px;
 
 }
 .firstparagraph {
@@ -49,6 +52,8 @@ le block de nav.
  */
 
 nav {
+    display: flex;
+    flex-direction: column;
     border: 2px solid red;
     float: left;
     position: relative;
@@ -81,14 +86,16 @@ nav {
     background-color: red;
     writing-mode: lr;
     text-align: right;
+    margin-top: 2px;
 }
 nav > ul li:hover .sous-menu{
-    display: block;
+    display: flex;
+    flex-direction: row;
     border: 2px solid greenyellow;
     padding: 3px;
     height: 100%;
     background-color: white;
-    margin-top: 0;
+    margin: -8px -10px -5px 6px;
 }
 /*Quand je fais directement un <a>, ça marche pas donc j'ai mis un
 un p puis un a
