--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
 
 .intro {
     background-color: #49caff;
-    display: block;
-    position: fixed;
+    display: flex;
+    position: absolute;
     top: 60px;
     width: 100%;
     opacity: 50%;
@@ -50,12 +50,18 @@ body {
     margin-left: 60px;
 
 }
+.paragraph {
+    display: block;
+    position: relative;
+    top: 130px;
+}
 nav{
     border: 4px solid green;
     width: 300px;
-    height: 100%;
     overflow: visible;
     z-index: 1000;
+    position: sticky;
+    top: 170px;
 }
 .menulist {
     display: grid;
@@ -63,20 +69,21 @@ nav{
     grid-template-rows: 250px 220px 170px;
     margin: 0 auto;
     width: 300px;
-    top: 170px;
+    position: sticky;
     border: 2px solid black;
     text-transform: uppercase;
     z-index: 1000;
 
 }
-.mainmenu{
+li{
     list-style-type: none;
+}
+.mainmenu{
     border-right: 2px solid;
     border-top: 2px solid;
     border-top-color: deepskyblue;
     border-right-color: deepskyblue;
     grid-column: 1;
-    height: 100%;
     writing-mode: vertical-lr;
     text-orientation: upright;
     padding-left: 9px;
@@ -121,9 +128,8 @@ footer{
 un p puis un a
 */
 footer p{
-    float: left;
+    display: flex;
     font-family: fantasy, cursive;
-    box-sizing: border-box;
     border: 2px solid lavender;
     background-color: gray;
     color: #fef6ff;
@@ -141,8 +147,8 @@ footer p a{
 
 
 
-.logo{
+footer .logo{
     box-sizing: border-box;
     float: right;
-    display: block;
+    display: flex;
 }
